// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`idが設定できる 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -12,11 +12,11 @@
    \\"developerMode\\": Object {
      \\"estimatorIsActive\\": false,
      \\"isActive\\": true,
    },
    \\"estimator\\": Object {
-     \\"id\\": null,
+     \\"id\\": 1234,
      \\"result\\": \\"\\",
    },
    \\"timer\\": Object {
      \\"isActive\\": false,
      \\"scanSpeed\\": 500,"
`;

exports[`resultを設定できる 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -13,11 +13,11 @@
      \\"estimatorIsActive\\": false,
      \\"isActive\\": true,
    },
    \\"estimator\\": Object {
      \\"id\\": null,
-     \\"result\\": \\"\\",
+     \\"result\\": \\"あらゆる現実を全て自分の方へねじ曲げたのだ\\",
    },
    \\"timer\\": Object {
      \\"isActive\\": false,
      \\"scanSpeed\\": 500,
    },"
`;
